--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -37,9 +37,9 @@ regex = "1.11.1"
 lazy_static = "1.5.0"
 handlebars = "4.3"
 async-channel = "1.8"
-axum = { version = "0.8.1", features = ["tower-log"] }
+axum = { version = "0.8.1", features = ["macros", "tower-log"] }
 tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
-validator = "0.19.0"
+validator = { version = "0.19.0", features = ["derive"] }
 validator_derive = "0.19.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
