refactor(ci, portfolio): update CI workflow and refine deny.toml configuration
- Updated the CI workflow to use a specific version of the GitHub script action for commenting on pull requests, enhancing reliability.
- Refined the `deny.toml` configuration by consolidating vulnerability criteria into a single `criteria` table, improving clarity and maintainability.

These changes enhance the CI process and streamline the configuration for better security management.

--- a/portfolio/api/deny.toml
+++ b/portfolio/api/deny.toml
@@ -1,14 +1,11 @@
 [advisories]
 db-path = "~/.cargo/advisory-db"
-vulnerability = "deny"
-unmaintained = "warn"
-yanked = "warn"
-notice = "warn"
+criteria = { vulnerability = "deny", unmaintained = "warn", yanked = "warn", notice = "warn" }
 
 [licenses]
+default = "deny"
 unlicensed = "deny"
 allow = ["MIT", "Apache-2.0", "BSD-3-Clause", "ISC", "Zlib", "MPL-2.0"]
-default = "deny"
 confidence-threshold = 0.8
 
 [bans]
