--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,15 +121,14 @@ jobs:
           echo "Security vulnerabilities were found. Please review the job logs for details." >> ${{ github.workspace }}-SECURITY_REPORT.md
 
       - name: Comment PR
-        uses: actions/github-script@v6
         if: failure() && github.event_name == 'pull_request'
+        uses: actions/github-script@d70566966bbb446d06887700f68d905602745985
         with:
           script: |
             const fs = require('fs');
             const report = fs.readFileSync('${{ github.workspace }}-SECURITY_REPORT.md', 'utf8');
             github.rest.issues.createComment({
+              ...context.repo,
               issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.name,
               body: report
             });
