--- a/portfolio/api/deny.toml
+++ b/portfolio/api/deny.toml
@@ -1,12 +1,23 @@
 [advisories]
 db-path = "~/.cargo/advisory-db"
-criteria = { vulnerability = "deny", unmaintained = "warn", yanked = "warn", notice = "warn" }
 
 [licenses]
-default = "deny"
-unlicensed = "deny"
-allow = ["MIT", "Apache-2.0", "BSD-3-Clause", "ISC", "Zlib", "MPL-2.0"]
-confidence-threshold = 0.8
+# We want really high confidence when inferring licenses from text
+confidence-threshold = 0.93
+allow = [
+    "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
+    "MIT",
+    "MPL-2.0",
+    "BSD-3-Clause",
+    "ISC",
+    "Unicode-3.0",
+]
+exceptions = [
+    # Use exceptions for these as they only have a single user
+    { allow = ["Zlib"], crate = "tinyvec" },
+    { allow = ["OpenSSL"], crate = "ring" },
+]
 
 [bans]
 multiple-versions = "warn"
