chore(portfolio): update dependencies and enhance deny.toml configuration
- Replaced `dotenv` with `dotenvy` in Cargo.toml for improved environment variable management.
- Updated `wiremock` version from 0.5 to 0.6 to leverage new features and fixes.
- Added new vulnerability and maintenance settings in deny.toml to improve security oversight and management.

These changes enhance the project's dependency management and security configuration.

--- a/portfolio/api/Cargo.toml
+++ b/portfolio/api/Cargo.toml
@@ -21,7 +21,7 @@ serde_json = "1.0"
 # Logging and configuration
 env_logger = "0.11"
 log = "0.4"
-dotenv = "0.15"
+dotenvy = "0.15"
 
 # Error handling
 anyhow = "1.0"
@@ -56,4 +56,4 @@ mockito = "1.6.1"
 tempfile = "3.15.0"
 # Testing
 tokio-test = "0.4"
-wiremock = "0.5"
+wiremock = "0.6"
