--- a/portfolio/api/deny.toml
+++ b/portfolio/api/deny.toml
@@ -1,5 +1,13 @@
 [advisories]
 db-path = "~/.cargo/advisory-db"
+vulnerability = "deny"
+unmaintained = "warn"
+yanked = "warn"
+notice = "warn"
+ignore = [
+    # instant est une dépendance indirecte de wiremock (dev-dependency)
+    "RUSTSEC-2024-0384",
+]
 
 [licenses]
 # We want really high confidence when inferring licenses from text
